# py-sandboxrt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/srt/: __init__.py  cli.py  config.py  debug.py  http_proxy.py  linux_sandbox.py  macos_sandbox.py  platform_utils.py  sandbox_manager.py  sandbox_utils.py  socks_proxy.py  violation_store.py
tests/: conftest.py  test_cli.py  test_cli_config_loading.py  test_config.py  test_config_validation.py  test_env_filter.py  test_version.py  test_workspace_root.py
tests/sandbox/: test_glob_expand.py  test_integration.py  test_macos_seatbelt.py  test_mandatory_deny_paths.py  test_symlink_boundary.py  test_wrap_with_sandbox.py
