[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sandboxrt"
version = "0.2.0"
description = "A Python sandboxing tool for enforcing filesystem and network restrictions on arbitrary processes at the OS level"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Hung Tran", email = "Hungtd9@gmail.com" }
]
maintainers = [
    { name = "Hung Tran", email = "Hungtd9@gmail.com" }
]
keywords = [
    "sandbox",
    "security",
    "isolation",
    "process",
    "filesystem",
    "network",
    "macos",
    "linux",
    "bubblewrap",
    "seatbelt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/saolalab/py-sandboxrt"
Documentation = "https://github.com/saolalab/py-sandboxrt#readme"
Repository = "https://github.com/saolalab/py-sandboxrt"
Issues = "https://github.com/saolalab/py-sandboxrt/issues"
Changelog = "https://github.com/saolalab/py-sandboxrt/blob/main/CHANGELOG.md"

[project.scripts]
srt = "srt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/srt"]

[tool.hatch.version]
path = "src/srt/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["srt"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
